# DistAgent

./: .gitignore  Makefile  README.md  bench.txt
agent-worker/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
agent-worker/src/agent/: config.py  heartbeat.py  llm_client.py  main.py  plan_execute_loop.py  prefix_hash.py  server.py
agent-worker/src/agent/tools/: builtins.py  registry.py
agent-worker/tests/: conftest.py  test_prefix_hash.py  test_react.py
deploy/kubernetes/: agent.yaml  orchestrator.yaml  secrets-template.yaml
go-orchestrator/: Dockerfile  go.mod
go-orchestrator/cmd/client_demo/: main.go
go-orchestrator/cmd/e2e/: main.go
go-orchestrator/cmd/orchestrator/: main.go
go-orchestrator/internal/api/: heartbeat.go  orchestrator.go  orchestrator_bench_test.go
go-orchestrator/internal/dispatcher/: client.go
go-orchestrator/internal/fsm/: plan_execute.go  plan_execute_bench_test.go  plan_execute_test.go
go-orchestrator/internal/registry/: agent.go  inference.go  registry_bench_test.go  registry_test.go
go-orchestrator/internal/router/: chwbl.go  chwbl_bench_test.go  chwbl_test.go  prefix.go  prefix_bench_test.go  prefix_test.go  router.go
go-orchestrator/internal/stategraph/: executor.go  supervisor.go
proto/: buf.gen.yaml  buf.yaml
proto/distagent/v1/: agent.proto  common.proto  inference.proto  orchestrator.proto
