[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distagent-worker"
version = "0.1.0"
description = "DistAgent Python Agent Worker — CPU-only ReAct loop executor"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",
    "openai>=1.58.0",
    "structlog>=24.4.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
